8043264: hsdis library not picked up correctly on expected paths

Fix file separator issue on Windows

Reviewed-by: sla, sspitsyn